chore: import lumber 23425685b852a881957540f66ea3a239aadd5c2e fix(mongoose): wrap with quotes invalid js identifiers in sub documents properties (#578)
Signed-off-by: Guillaume Deslandes <guillaumed@forestadmin.com>

--- a/src/services/dumper/templates/app/models/mongo-model.hbs
+++ b/src/services/dumper/templates/app/models/mongo-model.hbs
@@ -6,7 +6,7 @@ module.exports = (mongoose, Mongoose) => {
   // Learn more here: https://docs.forestadmin.com/documentation/v/v6/reference-guide/models/enrich-your-models#declaring-a-new-field-in-a-model
   const schema = Mongoose.Schema({
   {{#each fields as |field|}}
-    '{{field.name}}': {{#if field.ref}}{ type: {{field.type}}, ref: '{{field.ref}}' }{{else if (isObject field.type)}}{{>renderNested type=field.type level=2}}{{else}}{{field.type}}{{/if}},
+    {{wq field.name}}: {{#if field.ref}}{ type: {{field.type}}, ref: '{{field.ref}}' }{{else if (isObject field.type)}}{{>renderNested type=field.type level=2}}{{else}}{{field.type}}{{/if}},
   {{/each}}
   }, {
     timestamps: {{timestamps}},
