chore: improve docker support

--- a/src/services/dumper/templates/app/docker-compose.hbs
+++ b/src/services/dumper/templates/app/docker-compose.hbs
@@ -26,3 +26,7 @@ services:
       - "${APPLICATION_PORT}:${APPLICATION_PORT}"
     volumes:
       - ./:/usr/src/app
+{{#if extraHost }}
+    extra_hosts:
+      - {{ extraHost }}:host-gateway
+{{/if}}
