--- a/src/services/dumper/templates/app/Dockerfile.hbs
+++ b/src/services/dumper/templates/app/Dockerfile.hbs
@@ -1,8 +1,8 @@
 FROM node:10-alpine
 WORKDIR /usr/src/app
-COPY package*.json ./
-RUN npm install lumber-cli -g -s
-RUN npm install -s
+# install node_modules in another directory to easy mount folder for develoment purpose
+ENV NODE_PATH=/usr/src/node_modules
 COPY . .
+RUN npm install -s --prefix /usr/src .
 EXPOSE ${APPLICATION_PORT}
 CMD ["npm", "start"]
