chore: add extra host when developing internally
Signed-off-by: Guillaume Deslandes <guillaumed@forestadmin.com>

--- a/src/services/dumper/templates/app/docker-compose.hbs
+++ b/src/services/dumper/templates/app/docker-compose.hbs
@@ -21,6 +21,8 @@ services:
 {{#if forestUrl }}
       - NODE_TLS_REJECT_UNAUTHORIZED=0
       - FOREST_URL={{ forestUrl }}
+    extra_hosts:
+      - api.development.forestadmin.com:host-gateway
 {{/if}}
     ports:
       - "${APPLICATION_PORT}:${APPLICATION_PORT}"
