--- a/src/services/dumper/templates/app/docker-compose.hbs
+++ b/src/services/dumper/templates/app/docker-compose.hbs
@@ -21,8 +21,10 @@ services:
 {{#if forestUrl }}
       - NODE_TLS_REJECT_UNAUTHORIZED=0
       - FOREST_URL={{ forestUrl }}
+{{#if forestExtraHost}}
     extra_hosts:
-      - api.development.forestadmin.com:host-gateway
+      - {{forestExtraHost}}:host-gateway
+{{/if}}
 {{/if}}
     ports:
       - "${APPLICATION_PORT}:${APPLICATION_PORT}"
