chore: add Dockerfile to build command line inside docker (#196)

--- a/src/services/dumper/templates/app/docker-compose.hbs
+++ b/src/services/dumper/templates/app/docker-compose.hbs
@@ -21,6 +21,10 @@ services:
 {{#if forestUrl }}
       - NODE_TLS_REJECT_UNAUTHORIZED=0
       - FOREST_URL={{ forestUrl }}
+{{#if forestExtraHost}}
+    extra_hosts:
+      - {{forestExtraHost}}:host-gateway
+{{/if}}
 {{/if}}
     ports:
       - "${APPLICATION_PORT}:${APPLICATION_PORT}"
