chore(dumper): add default value for schemaDir Liana option
Signed-off-by: Guillaume Deslandes <guillaumed@forestadmin.com>

--- a/src/services/dumper/templates/app/middlewares/forestadmin.hbs
+++ b/src/services/dumper/templates/app/middlewares/forestadmin.hbs
@@ -12,6 +12,7 @@ module.exports = async function forestadmin(app) {
     configDir: path.join(__dirname, '../forest'),
     envSecret: process.env.FOREST_ENV_SECRET,
     authSecret: process.env.FOREST_AUTH_SECRET,
+    schemaDir: process.env.FOREST_SCHEMA_DIR,
     objectMapping,
     connections,
   }));
