--- a/src/services/dumper/templates/app/Dockerfile.hbs
+++ b/src/services/dumper/templates/app/Dockerfile.hbs
@@ -1,9 +1,6 @@
 FROM node:10-alpine
 WORKDIR /usr/src/app
-# install node_modules in another directory to easy mount folder for develoment purpose
-ENV NODE_PATH=/usr/src/node_modules
-ENV FOREST_SCHEMA_DIR=/usr/src/app
 COPY . .
-RUN npm install -s --prefix /usr/src .
+RUN npm install -s
 EXPOSE ${APPLICATION_PORT}
 CMD ["npm", "start"]
