--- a/src/services/dumper/templates/app/docker-compose.hbs
+++ b/src/services/dumper/templates/app/docker-compose.hbs
@@ -30,3 +30,4 @@ services:
       - "${APPLICATION_PORT}:${APPLICATION_PORT}"
     volumes:
       - ./:/usr/src/app
+      - /usr/src/app/node_modules
