--- a/src/services/dumper/templates/app/app.hbs
+++ b/src/services/dumper/templates/app/app.hbs
@@ -34,6 +34,12 @@ app.use('/forest/authentication', cors({
   // redirects to the callback route
   origin: corsConfig.origin.concat('null')
 }));
+app.use(function (req, res, next) {
+  if (req.headers['access-control-request-private-network']) {
+    res.setHeader('access-control-allow-private-network', 'true');
+  }
+  next(null);
+});
 app.use(cors(corsConfig));
 app.use(bodyParser.json());
 app.use(bodyParser.urlencoded({ extended: false }));
