fix(dumper): add better support of forestUrl

--- a/src/services/dumpers/templates/agent-nodejs/env.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/env.hbs
@@ -4,10 +4,10 @@ CORS_ORIGINS=
 
 DATABASE_URL={{ databaseUrl }}
 {{#if hasDockerDatabaseUrl}}
-  DOCKER_DATABASE_URL={{ dockerDatabaseUrl }}
+DOCKER_DATABASE_URL={{ dockerDatabaseUrl }}
 {{/if}}
 {{#if dbSchema }}
-  DATABASE_SCHEMA={{ dbSchema }}
+DATABASE_SCHEMA={{ dbSchema }}
 {{/if}}
 DATABASE_SSL={{ ssl }}
 # This should be removed in production environment.
@@ -15,3 +15,8 @@ DATABASE_REJECT_UNAUTHORIZED=false
 
 FOREST_AUTH_SECRET={{ forestAuthSecret }}
 FOREST_ENV_SECRET={{ forestEnvSecret }}
+
+{{#if forestUrl}}
+FOREST_URL={{forestUrl}}
+NODE_TLS_REJECT_UNAUTHORIZED=0
+{{/if}}
