--- a/src/services/dumpers/templates/agent-nodejs/env.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/env.hbs
@@ -1,22 +1,22 @@
-APPLICATION_PORT={{ port }}
-
-CORS_ORIGINS=
-
-DATABASE_URL={{ databaseUrl }}
-{{#if hasDockerDatabaseUrl}}
-DOCKER_DATABASE_URL={{ dockerDatabaseUrl }}
-{{/if}}
-{{#if dbSchema }}
-DATABASE_SCHEMA={{ dbSchema }}
-{{/if}}
-DATABASE_SSL={{ ssl }}
-# This should be removed in production environment.
-DATABASE_REJECT_UNAUTHORIZED=false
-
 FOREST_AUTH_SECRET={{ forestAuthSecret }}
 FOREST_ENV_SECRET={{ forestEnvSecret }}
 
-{{#if forestUrl}}
-FOREST_URL={{forestUrl}}
+{{#if forestServerUrl}}
+FOREST_SERVER_URL: {{ forestServerUrl }},
 NODE_TLS_REJECT_UNAUTHORIZED=0
 {{/if}}
+
+APPLICATION_PORT={{ applicationPort }}
+
+DATABASE_URL={{ databaseUrl }}
+DATABASE_SSL={{ databaseSsl }}
+# This should be removed in production environment.
+DATABASE_REJECT_UNAUTHORIZED=false
+{{#if dbSchema }}
+DATABASE_SCHEMA={{ databaseSchema }}
+{{/if}}
+{{#if hasDockerDatabaseUrl}}
+DOCKER_DATABASE_URL={{ dockerDatabaseUrl }}
+{{/if}}
+
+NODE_ENV=development
