--- a/src/services/dumpers/templates/agent-nodejs/env.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/env.hbs
@@ -2,7 +2,7 @@ FOREST_AUTH_SECRET={{ forestAuthSecret }}
 FOREST_ENV_SECRET={{ forestEnvSecret }}
 
 {{#if forestServerUrl}}
-FOREST_SERVER_URL: {{ forestServerUrl }},
+FOREST_SERVER_URL={{ forestServerUrl }},
 NODE_TLS_REJECT_UNAUTHORIZED=0
 {{/if}}
 
@@ -10,8 +10,8 @@ APPLICATION_PORT={{ applicationPort }}
 
 DATABASE_URL={{ databaseUrl }}
 DATABASE_SSL={{ databaseSsl }}
-# This should be removed in production environment.
-DATABASE_REJECT_UNAUTHORIZED=false
+# This should be removed in production environment. It allows to bypass SSL certificate verification.
+DATABASE_REJECT_UNAUTHORIZED=
 {{#if dbSchema }}
 DATABASE_SCHEMA={{ databaseSchema }}
 {{/if}}
