test: fix tests and add integration tests

--- a/src/services/dumpers/templates/agent-nodejs/env.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/env.hbs
@@ -1,17 +1,16 @@
 FOREST_AUTH_SECRET={{ forestAuthSecret }}
 FOREST_ENV_SECRET={{ forestEnvSecret }}
 
-{{#if forestServerUrl}}
-FOREST_SERVER_URL={{ forestServerUrl }},
+FOREST_SERVER_URL={{ forestServerUrl }}
+# This should be removed in production environment.
 NODE_TLS_REJECT_UNAUTHORIZED=0
-{{/if}}
 
 APPLICATION_PORT={{ applicationPort }}
 
 DATABASE_URL={{ databaseUrl }}
 DATABASE_SSL={{ databaseSsl }}
-# This should be removed in production environment. It allows to bypass SSL certificate verification.
-DATABASE_REJECT_UNAUTHORIZED=
+# This should be true in production environment. It allows to bypass SSL certificate verification.
+DATABASE_REJECT_UNAUTHORIZED=true
 {{#if dbSchema }}
 DATABASE_SCHEMA={{ databaseSchema }}
 {{/if}}
