--- a/src/services/dumpers/templates/agent-nodejs/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/index.hbs
@@ -56,9 +56,7 @@ const agent = createAgent({
   typingsPath: './typings.ts',
 })
   // Connect your datasources.
-  .addDataSource(
-    {{datasourceCreation}}
-  );
+  .addDataSource({{datasourceCreation}});
 
 // Add customizations here.
 // agent.addCustomization('collectionName', collection => ...);
