--- a/src/services/dumpers/templates/agent-nodejs/env.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/env.hbs
@@ -7,17 +7,17 @@ FOREST_SERVER_URL={{ forestServerUrl }}
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
 {{/if}}
-APPLICATION_PORT={{ applicationPort }}
+APPLICATION_PORT={{ appPort }}
 
-DATABASE_URL={{ databaseUrl }}
-DATABASE_SSL={{ databaseSsl }}
+DATABASE_URL={{ dbUrl }}
+DATABASE_SSL={{ dbSsl }}
 # This should be true in production environment. It allows to bypass SSL certificate verification.
 DATABASE_REJECT_UNAUTHORIZED=false
-{{#if databaseSchema }}
-DATABASE_SCHEMA={{ databaseSchema }}
+{{#if dbSchema }}
+DATABASE_SCHEMA={{ dbSchema }}
 {{/if}}
-{{#if hasDockerDatabaseUrl}}
-DOCKER_DATABASE_URL={{ dockerDatabaseUrl }}
+{{#if hasDockerDbUrl}}
+DOCKER_DATABASE_URL={{ dockerDbUrl }}
 {{/if}}
 
 NODE_ENV=development
