--- a/src/services/dumpers/templates/agent-nodejs/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/index.hbs
@@ -54,6 +54,7 @@ const agent = createAgent({
   {{/if}}
   // Autocompletion of collection names and fields
   typingsPath: './typings.ts',
+  typingsMaxDepth: 5,
 })
   // Connect your datasources.
   .addDataSource({{datasourceCreation}});
