--- a/src/services/dumpers/templates/agent-nodejs/models/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/models/index.hbs
@@ -14,7 +14,7 @@ fs
   .forEach((file) => {
     try {
       const { schema, modelName, collectionName } = require(path.join(__dirname, file));
-      connection.model(modelName, schema, tableName);
+      connection.model(modelName, schema, collectionName);
     } catch (error) {
       console.error(`Model creation error: ${error}`);
     }
