chore: re-add node_modules as a docker volume to prevent override

--- a/src/services/dumpers/templates/agent-nodejs/docker-compose.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/docker-compose.hbs
@@ -21,3 +21,4 @@ services:
       - "${APPLICATION_PORT}:${APPLICATION_PORT}"
     volumes:
       - ./:/usr/src/app
+      - /usr/src/app/node_modules
