fix(exemple): use the proper method in the exemple

--- a/src/services/dumpers/templates/agent-nodejs/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/index.hbs
@@ -49,7 +49,7 @@ const agent = createAgent({
   .addDataSource({{datasourceCreation}});
 
 // Add customizations here.
-// agent.addCustomization('collectionName', collection => ...);
+// agent.customizeCollection('collectionName', collection => ...);
 
 agent
   // Expose an HTTP endpoint.
