fix(mongoose-models): don't use quote on model attributes that do not have special characters

--- a/src/services/dumpers/templates/agent-nodejs/javascript/models/model.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/javascript/models/model.hbs
@@ -2,7 +2,7 @@ const Mongoose = require('mongoose');
 
 const schema = new Mongoose.Schema({
 {{#each fields as |field|}}
-  {{wq field.name}}: {{#if field.ref}}{ type: {{field.type}}, ref: '{{field.ref}}' }{{else if (isObject field.type)}}{{>renderNested type=field.type level=1}}{{else}}{{field.type}}{{/if}},
+  {{wsc field.name}}: {{#if field.ref}}{ type: {{field.type}}, ref: '{{field.ref}}' }{{else if (isObject field.type)}}{{>renderNested type=field.type level=1}}{{else}}{{field.type}}{{/if}},
 {{/each}}
 }, {
   timestamps: {{timestamps}},
