chore(agent-nodejs): merge

--- a/src/services/dumpers/templates/agent-nodejs/javascript/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/javascript/index.hbs
@@ -60,7 +60,7 @@ const agent = createAgent({
 {{#if dbSchema}}
       schema: process.env.DATABASE_SCHEMA,
 {{/if}}
-      ...dialectOptions,
+      dialectOptions,
     }),
   );
 {{/if}}
