--- a/src/services/dumpers/templates/agent-nodejs/typescript/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/typescript/index.hbs
@@ -60,7 +60,7 @@ agent.addDataSource(
 {{#if dbSchema}}
     schema: process.env.DATABASE_SCHEMA,
 {{/if}}
-    ...dialectOptions,
+    dialectOptions,
   }),
 );
 {{/if}}
