--- a/src/services/dumpers/templates/agent-nodejs/typescript/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/typescript/index.hbs
@@ -2,7 +2,12 @@ import type { Schema } from './typings';
 
 import 'dotenv/config';
 import { createAgent, CollectionCustomizer } from '@forestadmin/agent';
-{{datasourceImport}}
+{{#if isMongoose}}
+import { createMongooseDataSource } from '@forestadmin/datasource-mongoose';
+import connection from './models';
+{{else}}
+import { createSqlDataSource } from '@forestadmin/datasource-sql';
+{{/if}}
 {{#unless isMongoose}}
 
 const dialectOptions: { [name: string]: any } = {};
@@ -46,7 +51,19 @@ const agent = createAgent<Schema>({
 
 // Connect your datasources
 // All options are documented at https://docs.forestadmin.com/developer-guide-agents-nodejs/data-sources/connection
-agent.addDataSource({{datasourceCreation}});
+{{#if isMongoose}}
+agent.addDataSource(createMongooseDataSource(connection, { flattenMode: 'auto' }));
+{{else}}
+agent.addDataSource(
+  createSqlDataSource({
+    uri: process.env.DATABASE_URL,
+{{#if dbSchema}}
+    schema: process.env.DATABASE_SCHEMA,
+{{/if}}
+    dialectOptions,
+  }),
+);
+{{/if}}
 
 // Add customizations here.
 // For instance, you can code custom actions, charts, create new fields or relationships, load plugins.
