--- a/src/services/dumpers/templates/agent-nodejs/common/env.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/common/env.hbs
@@ -11,7 +11,7 @@ APPLICATION_PORT={{ appPort }}
 
 DATABASE_URL={{ dbUrl }}
 DATABASE_SSL={{ dbSsl }}
-# This should be true in production environment. It allows to bypass SSL certificate verification.
+# This should be true in production environment. When false, it allows to bypass SSL certificate verification.
 DATABASE_REJECT_UNAUTHORIZED=false
 {{#if dbSchema }}
 DATABASE_SCHEMA={{ dbSchema }}
