--- a/src/services/dumpers/templates/agent-nodejs/javascript/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/javascript/index.hbs
@@ -48,25 +48,23 @@ const agent = createAgent({
   // Autocompletion of collection names and fields
   typingsPath: './typings.ts',
   typingsMaxDepth: 5,
-})
-  // Connect your datasources.
-{{#if isMongoose}}
-  .addDataSource(createMongooseDataSource(connection, { flattenMode: 'auto' }));
-{{else}}
-  .addDataSource(
-    createSqlDataSource({
-      uri: process.env.DATABASE_URL,
-{{#if dbSchema}}
-      schema: process.env.DATABASE_SCHEMA,
-{{/if}}
-      dialectOptions,
-    }),
-  );
-{{/if}}
+});
 
 // Connect your datasources
 // All options are documented at https://docs.forestadmin.com/developer-guide-agents-nodejs/data-sources/connection
-agent.addDataSource({{datasourceCreation}});
+{{#if isMongoose}}
+agent.addDataSource(createMongooseDataSource(connection, { flattenMode: 'auto' }));
+{{else}}
+agent.addDataSource(
+  createSqlDataSource({
+    uri: process.env.DATABASE_URL,
+{{#if dbSchema}}
+    schema: process.env.DATABASE_SCHEMA,
+{{/if}}
+    dialectOptions,
+  }),
+);
+{{/if}}
 
 // Add customizations here.
 // For instance, you can code custom actions, charts, create new fields or relationships, load plugins.
