--- a/src/services/dumpers/templates/agent-nodejs/common/env.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/common/env.hbs
@@ -10,12 +10,9 @@ NODE_TLS_REJECT_UNAUTHORIZED=0
 APPLICATION_PORT={{ appPort }}
 
 DATABASE_URL={{ dbUrl }}
-DATABASE_SSL={{ dbSsl }}
-# This should be true in production environment. When false, it allows to bypass SSL certificate verification.
-DATABASE_REJECT_UNAUTHORIZED=false
-{{#if dbSchema }}
-DATABASE_SCHEMA={{ dbSchema }}
-{{/if}}
+{{#unless isMongoose}}
+DATABASE_SSL_MODE={{ dbSslMode }}
+{{/unless}}
 {{#if hasDockerDbUrl}}
 DOCKER_DATABASE_URL={{ dockerDbUrl }}
 {{/if}}
