--- a/src/services/dumpers/templates/agent-nodejs/typescript/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/typescript/index.hbs
@@ -1,3 +1,6 @@
+{{#unless isMongoose}}
+import type { SslMode } from '@forestadmin/datasource-sql';
+{{/unless}}
 import type { Schema } from './typings';
 
 import 'dotenv/config';
@@ -8,29 +11,6 @@ import connection from './models';
 {{else}}
 import { createSqlDataSource } from '@forestadmin/datasource-sql';
 {{/if}}
-{{#unless isMongoose}}
-
-const dialectOptions: { [name: string]: any } = {};
-
-if (process.env.DATABASE_SSL && JSON.parse(process.env.DATABASE_SSL.toLowerCase())) {
-  // Set to false to bypass SSL certificate verification (useful for self-signed certificates).
-  const rejectUnauthorized =
-    process.env.DATABASE_REJECT_UNAUTHORIZED &&
-    JSON.parse(process.env.DATABASE_REJECT_UNAUTHORIZED.toLowerCase());
-{{#if isMySQL}}
-  dialectOptions.ssl = { rejectUnauthorized };
-{{else if isMSSQL}}
-  dialectOptions.options = {
-    encrypt: true,
-    trustServerCertificate: !rejectUnauthorized,
-  };
-{{else if isMariaDB}}
-  dialectOptions.ssl = rejectUnauthorized ? true: { rejectUnauthorized };
-{{else}}
-  dialectOptions.ssl = rejectUnauthorized ? true : { require: true, rejectUnauthorized };
-{{/if}}
-}
-{{/unless}}
 
 // This object allows to configure your Forest Admin panel
 const agent = createAgent<Schema>({
@@ -57,10 +37,7 @@ agent.addDataSource(createMongooseDataSource(connection, { flattenMode: 'auto' }
 agent.addDataSource(
   createSqlDataSource({
     uri: process.env.DATABASE_URL,
-{{#if dbSchema}}
-    schema: process.env.DATABASE_SCHEMA,
-{{/if}}
-    dialectOptions,
+    sslMode: process.env.DATABASE_SSL_MODE as SslMode,
   }),
 );
 {{/if}}
