refactor: revert changes on schema

--- a/src/services/dumpers/templates/agent-nodejs/common/env.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/common/env.hbs
@@ -13,6 +13,9 @@ DATABASE_URL={{ dbUrl }}
 {{#unless isMongoose}}
 DATABASE_SSL_MODE={{ dbSslMode }}
 {{/unless}}
+{{#if dbSchema }}
+DATABASE_SCHEMA={{ dbSchema }}
+{{/if}}
 {{#if hasDockerDbUrl}}
 DOCKER_DATABASE_URL={{ dockerDbUrl }}
 {{/if}}
