fix(project-create): do not crash when SQL databases use self-signed certificates (#591)

--- a/src/services/dumpers/templates/agent-nodejs/common/env.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/common/env.hbs
@@ -10,9 +10,9 @@ NODE_TLS_REJECT_UNAUTHORIZED=0
 APPLICATION_PORT={{ appPort }}
 
 DATABASE_URL={{ dbUrl }}
-DATABASE_SSL={{ dbSsl }}
-# This should be true in production environment. When false, it allows to bypass SSL certificate verification.
-DATABASE_REJECT_UNAUTHORIZED=false
+{{#unless isMongoose}}
+DATABASE_SSL_MODE={{ dbSslMode }}
+{{/unless}}
 {{#if dbSchema }}
 DATABASE_SCHEMA={{ dbSchema }}
 {{/if}}
