fix: typos in generated projects

--- a/src/services/dumpers/templates/agent-nodejs/javascript/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/javascript/index.hbs
@@ -68,7 +68,7 @@ agent.addDataSource(
 //   // Search customization is documented here:
 //   // https://docs.forestadmin.com/developer-guide-agents-nodejs/agent-customization/search
 //   collection.replaceSearch(searchString => {
-//     // user has typed a product id, let's only that column
+//     // user has most likely typed a product id, let's search only that column
 //     if (searchString.match(/^prdid[\d]{8}/$))
 //       return { field: 'id', operator: 'Equal', value: searchString };
 
