--- a/src/services/dumpers/templates/agent-nodejs/typescript/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/typescript/index.hbs
@@ -51,7 +51,7 @@ agent.addDataSource(
 //
 // Here is some code to get your started
 //
-// agent.customizeCollection('products', (collection: CollectionCustomizer<Schema, 'products'>) => {
+// agent.customizeCollection('products', collection => {
 //   // Actions are documented here:
 //   // https://docs.forestadmin.com/developer-guide-agents-nodejs/agent-customization/actions
 //   collection.addAction('Order new batch from supplier', {
@@ -70,7 +70,7 @@ agent.addDataSource(
 //   // Search customization is documented here:
 //   // https://docs.forestadmin.com/developer-guide-agents-nodejs/agent-customization/search
 //   collection.replaceSearch(searchString => {
-//     // user has typed a product id, let's only that column
+//     // user has most likely typed a product id, let's search only that column
 //     if (searchString.match(/^prdid[\d]{8}/$))
 //       return { field: 'id', operator: 'Equal', value: searchString };
 
