fix(database): properly dump database connection url

--- a/src/services/dumpers/templates/agent-nodejs/javascript/index.hbs
+++ b/src/services/dumpers/templates/agent-nodejs/javascript/index.hbs
@@ -31,9 +31,9 @@ const agent = createAgent({
 {{#if isMongo}}
 agent.addDataSource(
   createMongoDataSource({
-    uri: connectionString,
+    uri: process.env.DATABASE_URL,
     dataSource: {
-      flattenMode: 'auto'
+      flattenMode: 'auto',
     },
   }),
 );
